# FileValidation

./: README.md
FileValidation/: CMakeLists.txt  TestApplication.cpp  isValidFile.cpp  isValidFile.hpp
